@@ -41,7 +41,7 @@ tzxlist \- Sinclair ZX Spectrum "real" tape file lister
 .\"------------------------------------------------------------------
 .\"
 .SH DESCRIPTION
-tzxlist outputs a description of the contents of TZX, TAP and Warajevo
+tzxlist outputs a description of the contents of TZX, TAP, PZX and Warajevo
 TAP tape files.
 .P
 On supported systems it attempts to handle conversions of the 
